--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:layout_height="@dimen/item_list_height"
+    android:background="@drawable/ripple_bounded"
+    android:clickable="true"
+    android:focusable="true">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/itemArtContainer"
         android:layout_width="0dp"
-        android:layout_height="52dp"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
         app:cardCornerRadius="1000dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="H,1:1"
@@ -19,6 +23,8 @@
             android:id="@+id/itemArt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="?attr/bg_alt"
+            android:contentDescription="@string/art"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/placeholder" />
     </androidx.cardview.widget.CardView>
@@ -28,8 +34,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:gravity="bottom"
         android:text="@string/primary"
+        android:textColor="?attr/fg"
+        android:textSize="@dimen/text_size"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/itemSecondary"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,12 +49,12 @@
         android:id="@+id/itemSecondary"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
         android:gravity="top"
         android:text="@string/secondary"
-        android:textColor="@color/fg_alt"
+        android:textColor="?attr/fg_alt"
+        android:textSize="@dimen/text_size"
         app:layout_constraintBottom_toBottomOf="@+id/itemArtContainer"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/itemArtContainer"
+        app:layout_constraintEnd_toEndOf="@+id/itemPrimary"
+        app:layout_constraintStart_toStartOf="@+id/itemPrimary"
         app:layout_constraintTop_toBottomOf="@+id/itemPrimary" />
 </androidx.constraintlayout.widget.ConstraintLayout>
