--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/view"
-        android:name="com.github.aecsocket.himom.fragment.PagerFragment"
+        android:name="com.github.aecsocket.player.fragment.PagerFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/bg" />
+        tools:layout="@layout/fragment_pager" />
 
 </layout>
