--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/view_pager_fragment"
-        android:name="com.github.aecsocket.himom.nav.ViewPagerFragment"
+        android:name="com.github.aecsocket.player.nav.ViewPagerFragment"
         tools:layout="@layout/fragment_view_pager">
         <action
             android:id="@+id/action_viewPagerFragment_to_homeFragment"
@@ -17,14 +17,14 @@
     </fragment>
     <fragment
         android:id="@+id/home_fragment"
-        android:name="com.github.aecsocket.himom.nav.HomeFragment">
+        android:name="com.github.aecsocket.player.nav.HomeFragment">
         <action
             android:id="@+id/action_homeFragment_to_libraryFragment"
             app:destination="@id/library_fragment" />
     </fragment>
     <fragment
         android:id="@+id/library_fragment"
-        android:name="com.github.aecsocket.himom.nav.LibraryFragment"
+        android:name="com.github.aecsocket.player.nav.LibraryFragment"
         tools:layout="@layout/fragment_library">
         <action
             android:id="@+id/action_library_fragment_to_history_fragment"
@@ -32,17 +32,17 @@
     </fragment>
     <fragment
         android:id="@+id/history_fragment"
-        android:name="com.github.aecsocket.himom.nav.HistoryFragment" >
+        android:name="com.github.aecsocket.player.nav.HistoryFragment" >
         <action
             android:id="@+id/action_history_fragment_to_queueFragment"
             app:destination="@id/queue_fragment" />
     </fragment>
     <fragment
         android:id="@+id/queue_fragment"
-        android:name="com.github.aecsocket.himom.nav.QueueFragment"
+        android:name="com.github.aecsocket.player.nav.QueueFragment"
         android:label="QueueFragment" />
     <fragment
         android:id="@+id/search_fragment"
-        android:name="com.github.aecsocket.himom.nav.SearchFragment"
+        android:name="com.github.aecsocket.player.nav.SearchFragment"
         android:label="SearchFragment" />
 </navigation>
