--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="accent">#a8af20</color>
+    <color name="accent">#ff9800</color>
 
-    <color name="bg">#ffffff</color>
-    <color name="bg_alt">#dedede</color>
-    <color name="fg">#000000</color>
-    <color name="fg_alt">#666666</color>
-    <color name="hint">#888888</color>
-    <color name="ripple">#44000000</color>
-    <color name="shimmer">#c2c2c2</color>
+    <color name="live">#e53935</color>
+
+    <color name="bg_light">#ffffff</color>
+    <color name="bg_alt_light">#e0e0e0</color>
+    <color name="fg_light">#000000</color>
+    <color name="fg_alt_light">#616161</color>
+    <color name="ripple_light">#44000000</color>
+
+    <color name="bg_dark">#000000</color>
+    <color name="bg_alt_dark">#212121</color>
+    <color name="fg_dark">#ffffff</color>
+    <color name="fg_alt_dark">#bdbdbd</color>
+    <color name="ripple_dark">#44ffffff</color>
 </resources>
