--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="text_size">15sp</dimen>
-    <dimen name="text_size_heading">28sp</dimen>
-    <dimen name="text_size_subheading">22sp</dimen>
+    <dimen name="text_size">14sp</dimen>
+    <dimen name="text_size_heading">24sp</dimen>
+    <dimen name="text_size_subheading">18sp</dimen>
+    <dimen name="item_list_height">56dp</dimen>
+    <dimen name="sheet_bar_height">64dp</dimen>
+    <dimen name="time_bar_height">40dp</dimen>
 </resources>
