--- a/app/src/main/res/layout-land/fragment_now_playing.xml
+++ b/app/src/main/res/layout-land/fragment_now_playing.xml
@@ -32,12 +32,13 @@
 
         <TextView
             android:id="@+id/nowPlayingTrack"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:ellipsize="marquee"
+            android:gravity="center_horizontal"
             android:singleLine="true"
             android:text="@string/track"
             android:textColor="?attr/fg"
@@ -48,17 +49,18 @@
 
         <TextView
             android:id="@+id/nowPlayingArtist"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="16dp"
+            android:gravity="center_horizontal"
             android:text="@string/artist"
             android:textColor="?attr/fg"
             android:textSize="@dimen/text_size_subheading"
             app:layout_constraintBottom_toTopOf="@+id/nowPlayingSeek"
-            app:layout_constraintEnd_toStartOf="@+id/nowPlayingDuration"
-            app:layout_constraintStart_toEndOf="@+id/nowPlayingPosition" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageButton
             android:id="@+id/nowPlayingPlayPause"
@@ -144,7 +146,7 @@
             android:progressBackgroundTint="?attr/bg_alt"
             android:progressTint="?attr/fg"
             android:secondaryProgressTint="?attr/fg"
-            android:thumbTint="@color/accent"
+            android:thumbTint="?attr/fg"
             app:layout_constraintBottom_toTopOf="@+id/nowPlayingPlayPause"
             app:layout_constraintEnd_toStartOf="@+id/nowPlayingDuration"
             app:layout_constraintStart_toEndOf="@+id/nowPlayingPosition" />
