--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -25,8 +25,7 @@
             android:layout_height="match_parent"
             android:background="?attr/bg_alt"
             android:contentDescription="@string/art"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/placeholder" />
+            android:scaleType="centerCrop" />
     </androidx.cardview.widget.CardView>
 
     <TextView
