--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,12 +4,14 @@
 
     <color name="live">#e53935</color>
 
+    <color name="accent_alt_light">#d67e00</color>
     <color name="bg_light">#ffffff</color>
     <color name="bg_alt_light">#e0e0e0</color>
     <color name="fg_light">#000000</color>
     <color name="fg_alt_light">#616161</color>
     <color name="ripple_light">#44000000</color>
 
+    <color name="accent_alt_dark">#ff9800</color>
     <color name="bg_dark">#000000</color>
     <color name="bg_alt_dark">#212121</color>
     <color name="fg_dark">#ffffff</color>
