--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -18,10 +18,11 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/mediaBarCoordinator"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/navTabs"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/mediaSheet"
@@ -183,9 +184,8 @@
                 <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/sheetPager"
                     android:layout_width="0dp"
-                    android:layout_height="500dp"
+                    android:layout_height="0dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/sheetTabs" />
 
